
syntax = "proto3";

option go_package = "grpc.maojianwei.com/server/discovery/api";

package Mao;

service MaoServerDiscovery {
    rpc Report(stream ServerReport) returns (stream ServerResponse) {}

    // server initiate the measure request
    rpc RttMeasure(stream RttEchoResponse) returns (stream RttEchoRequest) {}
}

message ServerReport {
    bool ok = 1;
    string hostname = 2;
    repeated string ips = 3;
    string now_datetime = 4;
    string aux_data = 5; // other Incubator or Aux data
}

message ServerResponse {
    string hostname = 1;
    string new_address = 2;
}

message RttEchoRequest {
    uint64 seq = 1;
}

message RttEchoResponse {
    string hostname = 1;
    uint64 ack = 2;
}